# stepmaniax-sdk-mp

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  THIRD_PARTY_LICENSES  bump-version.sh  tsan_suppressions.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
capture/animation_upload/: device_0.smxhid  device_1.smxhid
capture/both_pads/: device_0.smxhid  device_1.smxhid
capture/config_get_set/: device_0.smxhid  device_1.smxhid
capture/connection/: device_0.smxhid  device_1.smxhid
capture/factory_reset/: device_0.smxhid  device_1.smxhid
capture/force_recalibration/: device_0.smxhid  device_1.smxhid
capture/p1_solo/: device_0.smxhid
capture/p2_solo/: device_0.smxhid
capture/panel_animation/: device_0.smxhid  device_1.smxhid
capture/panel_lights/: device_0.smxhid  device_1.smxhid
capture/panel_test_mode/: device_0.smxhid  device_1.smxhid
capture/platform_lights/: device_0.smxhid  device_1.smxhid
capture/reenable_auto_lights/: device_0.smxhid  device_1.smxhid
capture/sensor_test_mode/: device_0.smxhid  device_1.smxhid
docs/: API_CODE_PATHS.md  ARDUINO_BUS_READER.md  INTERNAL_BUS_PROTOCOL.md  USB_PROTOCOL.md
include/: SMX.h
sample/: sample.cpp
scripts/: decode_smxhid.py
src/: SMX.cpp  SMXConfigPacket.cpp  SMXConfigPacket.h  SMXDevice.cpp  SMXDevice.h  SMXDeviceConnection.cpp  SMXDeviceConnection.h  SMXHIDInterface.cpp  SMXHIDInterface.h  SMXHIDRecorder.cpp  SMXHIDRecorder.h  SMXHelpers.cpp  SMXHelpers.h  SMXManager.cpp  SMXManager.h  SMXPanelAnimation.cpp  SMXProtocolConstants.h  SMXVersion.h.in
tests/: test_config_api.cpp  test_config_packet.cpp  test_device_connection.cpp  test_helpers.cpp  test_helpers_manager.h  test_integration.cpp  test_lights.cpp  test_main.cpp  test_move_semantics.cpp  test_panel_animation.cpp  test_replay.cpp  test_smx_manager.cpp
